# Dagster

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  rag.py  server.py
docs/: dagster_mcp.md  graphql_api.md  graphql_python_client.md
static/: index.html
