[project]
name = "dagster-rag"
version = "0.1.0"
description = "RAG chatbot for Dagster GraphQL documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "langchain-qdrant",
    "langchain-ollama",
    "qdrant-client",
    "sentence-transformers",
    "unstructured",
]
